# loci

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  docker-compose.yml  release.toml
.cargo/: config.toml
.github/: copilot-instructions.md
.github/agents/: developer.agent.md  planner.agent.md  reviewer.agent.md  task-workflow-orchestrator.agent.md  testing-expert.agent.md
.github/instructions/: project-context.instructions.md
.github/skills/: rust-development.extension.md  rust-development.md  rust-testing.extension.md  rust-testing.md
.github/workflows/: ci.yml  release.yml
crates/ai-memory-backend-ollama/: Cargo.toml
crates/ai-memory-backend-ollama/src/: backend.rs
crates/ai-memory-cli/: Cargo.toml
crates/ai-memory-cli/src/: main.rs
crates/ai-memory-context-enhancer/: Cargo.toml
crates/ai-memory-context-enhancer/src/: enhancer.rs  error.rs  extractor.rs  lib.rs  llm.rs  openai.rs
crates/ai-memory-core/: Cargo.toml
crates/ai-memory-core/src/: contextualization.rs  embedding.rs  enhancer.rs  error.rs  extractor.rs  lib.rs  llm.rs  memory.rs  openai.rs  port.rs  remote_model.rs  service.rs  store.rs
crates/ai-memory-core/src/backend/: common.rs  embedding.rs  error.rs  mod.rs  text_generation.rs
crates/ai-memory-embedding-ollama/: Cargo.toml
crates/ai-memory-embedding-ollama/src/: embedder.rs
crates/ai-memory-neo4j/: Cargo.toml
crates/ai-memory-neo4j/src/: config.rs  lib.rs  store.rs
crates/ai-memory-neo4j/tests/: neo4j_store.rs
crates/ai-memory-ollama/: Cargo.toml
crates/ai-memory-ollama/src/: client.rs  embedder.rs  lib.rs
crates/ai-memory-qdrant/: Cargo.toml
crates/ai-memory-qdrant/src/: lib.rs  store.rs
crates/ai-memory-qdrant/tests/: qdrant_store.rs
crates/ai-memory-storage-qdrant/: Cargo.toml
crates/ai-memory-storage-qdrant/src/: config.rs  store.rs
crates/ai-memory-storage-qdrant/tests/: qdrant_store.rs
crates/loci-backend-ollama/: Cargo.toml
crates/loci-backend-ollama/src/: backend.rs  lib.rs
crates/loci-cli/: Cargo.toml
crates/loci-cli/src/: cli.rs  fixture.rs  infra.rs  lib.rs  main.rs  mock.rs  testing.rs
crates/loci-cli/src/commands/: config.rs  generate.rs  input.rs  memory.rs  mod.rs  parse.rs
crates/loci-cli/src/handlers/: config.rs  generate.rs  json.rs  mapping.rs  memory.rs  mod.rs
crates/loci-cli/tests/: config.rs  generate.rs  memory.rs
crates/loci-cli/tests/common/: mod.rs
crates/loci-config/: Cargo.toml
crates/loci-config/src/: embedding.rs  embedding_capability.rs  error.rs  extraction.rs  extractor.rs  generation.rs  init.rs  lib.rs  memory.rs  model.rs  pipeline.rs  provider.rs  resolve.rs  routing.rs  store.rs
crates/loci-config/src/memory/: mod.rs  store.rs
crates/loci-config/src/memory/extraction/: extractor.rs  mod.rs
crates/loci-config/src/models/: embedding.rs  mod.rs  text.rs
crates/loci-config/src/providers/: mod.rs
crates/loci-config/src/resources/: mod.rs
crates/loci-core/: Cargo.toml
crates/loci-core/src/: classification.rs  contextualization.rs  embedding.rs  error.rs  lib.rs  memory.rs  store.rs  testing.rs
crates/loci-core/src/backend/: common.rs  embedding.rs  error.rs  text_generation.rs
crates/loci-core/src/memory/: mod.rs  store.rs
crates/loci-core/src/memory/extraction/: chunker.rs  llm.rs  merge.rs  mod.rs
crates/loci-core/src/memory_extraction/: chunker.rs  chunking.rs  llm.rs  mod.rs  pipeline.rs
crates/loci-core/src/model_provider/: common.rs  embedding.rs  error.rs  mod.rs  text_generation.rs
crates/loci-e2e-tests/: Cargo.toml
crates/loci-e2e-tests/tests/: contextualizer_e2e.rs  memory_extraction_e2e.rs  server_e2e.rs
crates/loci-e2e-tests/tests/support/: mod.rs
crates/loci-memory-store-qdrant/: Cargo.toml
crates/loci-memory-store-qdrant/src/: config.rs  lib.rs  store.rs  testing.rs
crates/loci-memory-store-qdrant/tests/: qdrant_store.rs
crates/loci-model-provider-ollama/: Cargo.toml
crates/loci-model-provider-ollama/src/: classification.rs  lib.rs  provider.rs  testing.rs
crates/loci-model-provider-ollama/tests/: ollama_provider.rs
crates/loci-model-provider-openai/: Cargo.toml
crates/loci-model-provider-openai/src/: lib.rs  provider.rs
crates/loci-server/: Cargo.toml  build.rs
crates/loci-server/proto/loci/generate/v1/: generate.proto
crates/loci-server/proto/loci/memory/v1/: memory.proto
crates/loci-server/src/: cli.rs  error.rs  infra.rs  lib.rs  main.rs  state.rs  testing.rs
crates/loci-server/src/routes/: generate.rs  health.rs  mod.rs  openai.rs  rpc.rs
crates/loci-server/src/rpc/: memory.rs  mod.rs
crates/loci-server/src/service/: generate.rs  memory.rs  mod.rs  openai.rs
crates/loci-server/tests/: generate.rs  memory.rs  openai.rs
crates/loci-server/tests/common/: mod.rs
crates/loci-server/tests/integration/: generate.rs  memory.rs
crates/loci-wire/: Cargo.toml
crates/loci-wire/src/: lib.rs  provider.rs  store.rs  testing.rs
eval/: .gitignore  fetch-sources.sh  run-eval.sh
