[workspace]
members = [
    "crates/loci-core",
    "crates/loci-model-provider-ollama",
    "crates/loci-memory-store-qdrant",
    "crates/loci-config",
    "crates/loci-cli",
    "crates/loci-e2e-tests",
    "crates/loci-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
async-stream = "0.3"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
futures = "0.3"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["trace", "cors"] }
uuid = { version = "1", features = ["v4", "serde"] }
pretty_assertions = "1"
rstest = "0.25"
