[package]
name = "ai-memory-core"
version.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
log.workspace = true
reqwest = { version = "0.12", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid.workspace = true
