[package]
name = "ai-memory-storage-qdrant"
version.workspace = true
edition.workspace = true

[features]
integration = []

[dependencies]
ai-memory-core = { path = "../ai-memory-core" }
chrono.workspace = true
log.workspace = true
qdrant-client = "1.14"
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
testcontainers = { version = "0.27", features  = ["http_wait_plain"] }
uuid.workspace = true
