[package]
name = "loci-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "loci"
path = "src/main.rs"

[dependencies]
loci-core = { path = "../loci-core" }
loci-memory-store-qdrant = { path = "../loci-memory-store-qdrant" }
loci-backend-ollama = { path = "../loci-backend-ollama" }
clap = { version = "4", features = ["derive", "env"] }
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4"] }
