[package]
name = "loci-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "loci"
path = "src/main.rs"

[dependencies]
loci-core = { path = "../loci-core" }
loci-config = { path = "../loci-config" }
loci-memory-store-qdrant = { path = "../loci-memory-store-qdrant" }
loci-model-provider-ollama = { path = "../loci-model-provider-ollama" }
clap = { version = "4", features = ["derive", "env"] }
dirs.workspace = true
futures.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4"] }
env_logger = "0.11.10"
systemd-journal-logger = { version = "2.2", optional = true }
log.workspace = true
