[package]
name = "loci-cli"
version.workspace = true
edition.workspace = true

[lib]
name = "loci_cli"
path = "src/lib.rs"

[[bin]]
name = "loci"
path = "src/main.rs"

[features]
systemd-journal-logger = ["dep:systemd-journal-logger"]
testing = ["loci-core/testing"]

[dependencies]
loci-core = { path = "../loci-core" }
loci-config = { path = "../loci-config" }
loci-memory-store-qdrant = { path = "../loci-memory-store-qdrant", features = ["background-delete"] }
loci-model-provider-ollama = { path = "../loci-model-provider-ollama" }
clap = { version = "4", features = ["derive", "env"] }
dirs.workspace = true
futures.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
env_logger = "0.11.10"
systemd-journal-logger = { version = "2.2", optional = true }
log.workspace = true

[dev-dependencies]
loci-cli = { path = ".", features = ["testing"] }
loci-core = { path = "../loci-core", features = ["testing"] }
pretty_assertions.workspace = true
rstest.workspace = true
serde_json.workspace = true
tempfile = "3"
