[package]
name = "loci-core"
version.workspace = true
edition.workspace = true

[dependencies]
async-stream.workspace = true
chrono.workspace = true
futures.workspace = true
log.workspace = true
reqwest = { version = "0.12", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true
