[package]
name = "loci-e2e-tests"
version.workspace = true
edition.workspace = true
publish = false

[features]
e2e = []

[dev-dependencies]
futures.workspace = true
loci-core = { path = "../loci-core", features = ["testing"] }
loci-memory-store-qdrant = { path = "../loci-memory-store-qdrant", features = ["testing"] }
loci-model-provider-ollama = { path = "../loci-model-provider-ollama", features = ["testing"] }
loci-server = { path = "../loci-server", features = ["testing"] }
pretty_assertions.workspace = true
testcontainers = { version = "0.27", features = ["http_wait_plain"] }
tokio.workspace = true
