[package]
name = "loci-memory-store-qdrant"
version.workspace = true
edition.workspace = true

[features]
integration = []

[dependencies]
tokio.workspace = true
loci-core = { path = "../loci-core" }
chrono.workspace = true
log.workspace = true
qdrant-client = "1.14"
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
testcontainers = { version = "0.27", features = ["http_wait_plain"] }
