[package]
name = "loci-memory-store-qdrant"
version.workspace = true
edition.workspace = true

[features]
integration = []
background-delete = ["dep:tokio"]

[dependencies]
tokio = { workspace = true, optional = true }
loci-core = { path = "../loci-core" }
chrono.workspace = true
log.workspace = true
qdrant-client = "1.17"
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
testcontainers = { version = "0.27", features = ["http_wait_plain"] }
tokio.workspace = true
