[package]
name = "loci-model-provider-ollama"
version.workspace = true
edition.workspace = true

[features]
e2e = []

[dependencies]
async-stream.workspace = true
futures.workspace = true
loci-core = { path = "../loci-core" }
log.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
futures.workspace = true
tokio.workspace = true
